// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Blocks/Button/Base Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm gHPRuo"
    onClick={[Function]}
  >
    <p
      className="sc-AxiKw cLOcWK"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Blocks/Button/Base Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm jxutPw"
    onClick={[Function]}
  >
    <p
      className="sc-AxiKw cLOcWK"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Blocks/Button/Base Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm ZtJdt"
    onClick={[Function]}
  >
    <p
      className="sc-AxiKw cLOcWK"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Blocks/Button/Cookie Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm lbpRGH"
    onClick={[Function]}
  >
    <p
      className="sc-AxiKw DTSNp"
    >
      OK
    </p>
  </button>
</div>
`;

exports[`Storyshots Blocks/Button/Cookie Inverse 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm dxLjKr"
    onClick={[Function]}
  >
    <p
      className="sc-AxiKw hbXxFA"
    >
      Cookie Preferences
    </p>
  </button>
</div>
`;

exports[`Storyshots Blocks/Button/Search Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm eukCWE"
    onClick={[Function]}
  >
    <div
      className="sc-AxhCb guAUfP"
    >
      <div
        className="sc-AxirZ kzXchU"
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxiKw porOw"
      >
        Search
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Blocks/Card/Dark Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb bdLUAq"
  >
    <div
      className="sc-AxhCb ipfxuP"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="darkcard-lg.png"
        />
      </div>
      <div
        className="sc-AxhCb cZgEAi"
      >
        <p
          className="sc-AxiKw kRqGEM"
        >
          Learn favorite summer recipes with celebrated chef Roze Traore
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/Card/Dark Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb cHIEcy"
  >
    <div
      className="sc-AxhCb ipfxuP"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="darkcard-md.png"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw kRqGEM"
        >
          Fruits de mer with Michelin chef Marc Favier
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/Card/Dark Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb kICKCZ"
  >
    <div
      className="sc-AxhCb ipfxuP"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="darkcard-sm.png"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw kRqGEM"
        >
          Fruits de mer with Michelin chef Marc Favier
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/Card/Light Multiple 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb hDjEmF"
  >
    <div
      className="sc-AxhCb fMpaBo"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw cCngPp"
        >
          Online experiences
        </p>
        <p
          className="sc-AxiKw eqRQNp"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
    <div
      className="sc-AxhCb fMpaBo"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="card2.jpg"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw cCngPp"
        >
          Your next getaway
        </p>
        <p
          className="sc-AxiKw eqRQNp"
        >
          Unplug or reconnect on a trip that's just a short drive away
        </p>
      </div>
    </div>
    <div
      className="sc-AxhCb fMpaBo"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="card3.jpg"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw cCngPp"
        >
          Entire homes
        </p>
        <p
          className="sc-AxiKw eqRQNp"
        >
          Comfortable private places, with room for friends or family
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/Card/Light Single With Title 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb crnaHo"
  >
    <div
      className="sc-AxhCb fMpaBo"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw cCngPp"
        >
          Online experiences
        </p>
        <p
          className="sc-AxiKw eqRQNp"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/Card/Light Single Without Title 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb crnaHo"
  >
    <div
      className="sc-AxhCb fMpaBo"
    >
      <div
        className="sc-AxhCb hpiXzu"
      >
        <img
          alt="card-image"
          className="sc-AxhUy CKPFt"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxhCb eBnqhK"
      >
        <p
          className="sc-AxiKw eqRQNp"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/Card/Section Black Lives Matter 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb bsNBui"
  >
    <div
      className="sc-AxhCb dKQJaW"
    >
      <div
        className="sc-AxhCb jPieBM"
      >
        <div
          className="sc-AxhCb kdbIet"
        >
          <div
            className="sc-AxhCb hVWeUF"
          >
            We stand with #BlackLivesMatter
          </div>
          <div
            className="sc-AxhCb kGIUxF"
          >
            We believe in a world where everyone belongs. We reject all racism that stands in the way.
          </div>
          <div
            className="sc-AxhCb lblAfN"
          >
            Donate
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks/SearchBar Mobile 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxhCb brJaSX"
  >
    <button
      className="sc-AxjAm gXNtTd"
      onClick={[Function]}
    >
      <div
        className="sc-AxgMl clxCuj"
      >
        <div
          className="sc-AxirZ cCrTiP"
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
        <div
          className="sc-AxhCb hsEcKD"
        >
          <p
            className="sc-AxiKw cLOcWK"
          >
            Where are you going?
          </p>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Blocks/SearchBar Normal 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm focuLH"
    onClick={[Function]}
  >
    <div
      className="sc-AxgMl hyXtBT"
    >
      <div
        className="sc-AxirZ kDsUQX"
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <div
        className="sc-AxhCb knzivN"
      >
        <p
          className="sc-AxiKw cLOcWK"
        >
          Add a location
        </p>
      </div>
    </div>
  </button>
</div>
`;
